--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "Yusril",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "4.4.0",
+    "@adiwajshing/baileys": "github:WhiskeySockets/Baileys",
     "@adiwajshing/keyed-db": "^0.2.4",
     "awesome-phonenumber": "^2.64.0",
     "chalk": "^4.1.2",
