--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "figlet": "^1.5.2",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
+    "get-video-duration": "^4.1.0",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
     "openai": "^3.1.0",
